--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -2,12 +2,14 @@
 server:  port: 8888
   
 spring:
+  profiles:
+    active: native
   cloud:
     config:
       server:
+#        native:
+#          search-locations: microservicos/fornecedor
         git:
           uri: https://github.com/eliasmichalczuk/microservices-spring-cloud
           search-paths: fornecedor
-#        native:
-#          search-locations:
   
