--- a/loja/pom.xml
+++ b/loja/pom.xml
@@ -43,6 +43,14 @@
 			</artifactId>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-feign -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-feign</artifactId>
+		    <version>1.4.7.RELEASE</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
