--- a/fornecedor/src/main/resources/application.yml
+++ b/fornecedor/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 
 server:
   port: 8086
-
+spring:
+  application:
+    name: fornecedor-service
 eureka:
   client:
     register-with-eureka: true
