--- a/fornecedor/src/main/resources/application.yml
+++ b/fornecedor/src/main/resources/application.yml
@@ -10,3 +10,11 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+      
+logging:
+  level:
+    root: INFO
+  org:
+    springframework:
+      web: DEBUG
+    hibernate: ERROR
