--- a/loja/pom.xml
+++ b/loja/pom.xml
@@ -28,6 +28,12 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
  -->
+ 
+	 <dependency>
+	    <groupId>ch.qos.logback</groupId>
+	    <artifactId>logback-core</artifactId>
+	    <version>1.2.3</version>
+	</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
