--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -11,5 +11,5 @@ spring:
 #          search-locations: microservicos/fornecedor
         git:
           uri: https://github.com/eliasmichalczuk/microservices-spring-cloud
-          search-paths: fornecedor
+          search-paths: fornecedor, loja
   
