--- a/loja/src/main/resources/application.yml
+++ b/loja/src/main/resources/application.yml
@@ -20,6 +20,13 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
       
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:8089/user
+hystrix:
+  shareSecurityContext: true
+      
 logging:
   level:
     root: INFO
